[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Desktop/Window.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/ui/window/window_big.png" type="Texture" id=2]
[ext_resource path="res://data/font.tres" type="DynamicFont" id=3]

[node name="Window" type="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -24.0
margin_right = 20.0
margin_bottom = 24.0
mouse_filter = 1
texture = ExtResource( 2 )
patch_margin_left = 10
patch_margin_top = 6
patch_margin_right = 10
patch_margin_bottom = 6
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DragButton" type="TextureButton" parent="."]
anchor_right = 1.0
margin_bottom = 3.0
mouse_filter = 1
size_flags_horizontal = 3
action_mode = 0

[node name="CloseButton" type="TextureButton" parent="."]
margin_right = 3.0
margin_bottom = 3.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.08
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaximizeButton" type="TextureButton" parent="."]
margin_left = 3.0
margin_right = 6.0
margin_bottom = 3.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.08

[node name="MinimizeButton" type="TextureButton" parent="."]
margin_left = 6.0
margin_right = 9.0
margin_bottom = 3.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.08

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 4.0
margin_right = -2.0
margin_bottom = -1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = -1.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_Window_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Window_mouse_exited"]
[connection signal="pressed" from="DragButton" to="." method="start_dragging"]
[connection signal="pressed" from="CloseButton" to="." method="close_window"]
[connection signal="pressed" from="MaximizeButton" to="." method="maximize_window"]
[connection signal="pressed" from="MinimizeButton" to="." method="minimize_window"]
